@@ -6,6 +6,7 @@
 * Add material design data point table example
 * Convert statistics tables directives to use material design tables
 * Load translations up-front in mdAdmin so they can be used by translation filter
+* Disable angular debug info in mdAdmin app and add option to bootstrap
 
 *Version 3.0.1*
 * Update demo virtual data sources JSON file
